_includes/css/agency.css
/* ... */
section#contact .section-heading {
    color: #fff;
}

section#contact .form-group {
    margin-bottom: 25px;
}

section#contact .form-group input,
section#contact .form-group textarea {
    padding: 20px;
}

section#contact .form-group input.form-control {
    height: auto;
}

section#contact .form-group textarea.form-control {
    height: 245px;
}

section#contact .form-control:focus {
    border-color: #{{ site.color.primary }};
    box-shadow: none;
}

section#contact::-webkit-input-placeholder {
    text-transform: uppercase;
    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact:-moz-placeholder {
    text-transform: uppercase;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact::-moz-placeholder {
    text-transform: uppercase;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact:-ms-input-placeholder {
    text-transform: uppercase;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    color: #bbb;
}

section#contact .text-danger {
    color: #C52128;
}



footer {
    padding: 25px 0;
    text-align: center;
    color: #ffffff;
}

footer span.copyright {
    text-transform: uppercase;
    text-transform: none;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    line-height: 40px;
}

footer ul.quicklinks {
    margin-bottom: 0;
    text-transform: uppercase;
    text-transform: none;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    line-height: 40px;
}

ul.social-buttons {
    margin-bottom: 0;
}

ul.social-buttons li a {
    display: block;
    width: 40px;
    height: 40px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 40px;
    outline: 0;
    color: #fff;
    background-color: #c52128;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

ul.social-buttons li a:hover,
ul.social-buttons li a:focus,
ul.social-buttons li a:active {
    background-color: #{{ site.color.primary }};
}

.btn:focus,
.btn:active,
.btn.active,
.btn:active:focus {
    outline: 0;
}

.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin-bottom: 15px;
    font-size: 3em;
}

.portfolio-modal .modal-content p {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content p.item-intro {
    margin: 20px 0 30px;
    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 16px;
    font-style: italic;
}

.portfolio-modal .modal-content ul.list-inline {
    margin-top: 0;
    margin-bottom: 30px;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #222;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #222;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

::-moz-selection {
    text-shadow: none;
    background: #{{ site.color.primary }};
}

::selection {
    text-shadow: none;
    background: #{{ site.color.primary }};
}

img::selection {
    background: 0 0;
}

img::-moz-selection {
    background-image: 
}

body {
    webkit-tap-highlight-color: #{{ site.color.primary }};
}

/*sadashiv*/
.box {
    background: #C52128;
    color: #fff;
    padding: 10px 4px;
    font-weight: bold;
    font-size: 16px;
    padding-left: 1em;
}

.white {
    background-color: #C52128;
    color: #c52128;
    padding: 10px 4px;
    font-weight: bold;
    font-size: 16px;
    padding-left: 1em;

}

.white {
    background-color: #ffffff;
    color: #C52128;

}

.contact_address{
    color:#3b4854;
    font-size:17px;
}

#contact_address .text-muted{
    text-align: center !important;
}

.mtop30{margin-top: 30px}

@media all and (max-width: 699px)  {
.mobile_float{
    margin-left:100px;
}

}

#map{
    width:100%;
    /*height:100%;*/
}

.contact_form_bg{
    position: relative;
}
.contact_form_bg{
    position: relative;
}

.partnered_text{
    font-weight: bold;
    font-size: 20px;
    text-align: center;
    color:#c52128;
}

.logo_scrol{
    background: #fff;
    padding-top: 18px;
    text-align: center;
    /*padding-bottom:50px;*/
}

#our-pride{
    /*position: relative;*/
}

#contact_address{
    /*position: absolute;*/
}

.learn_more_btn {
  display: block;
  font-size: 24px;
  width: 9em;
  padding: 12px;
  margin: 15px auto 0;
  margin-bottom: 15px;
  color: #c52128;
  border: 2px solid #c52128;
  border-radius: 4em;
  transition: color .3s ease, background .3s ease;
}

.learn_more_btn:hover {
display: block;
font-size: 24px;
width: 9em;
padding: 12px;
margin: 15px auto 0;
margin-bottom: 15px;
color: #fff;
background: #c52128;
border: 2px solid #c52128;
border-radius: 4em;
transition: color .3s ease, background .3s ease;
}

.button {
    display: block;
    background-color: #C52128;
    background-position: 100% -171px;
    width: 178px;
    padding: 16px;
    color: #fff;
    font-size: 22px;
    text-decoration: none;
    font-weight: bold;
    top: -5px;
    left: -5px;
    border-radius: 6px;
    border: none;
    -webkit-transition: background 0.25s linear;
    -moz-transition: background 0.25s linear;
    transition: background 0.25s linear;
}
/* ... */

